<resources>
    <string name="app_name">jklotz-FuelTrack</string>
    <string name="action_settings">Settings</string>
    <string name="AppTitle">Fuel Consumption Tracker</string>
    <string name="btnViewEdit">View/Edit Entries</string>
    <string name="btnAdd">Add Entry</string>
    <string name="title_activity_add">Add New Entry</string>
    <string name="lblDate">Date (yyyy-mm-dd):</string>
    <string name="lblStation">Station:</string>
    <string name="lblOdometer">Odometer (km):</string>
    <string name="lblFuelGrade">Fuel Grade:</string>
    <string name="lblFuelAmount">Fuel Amount (L):</string>
    <string name="lblFuelUnitCost">Fuel Unit Cost (¢/L):</string>
    <string name="lblFuelCost">Fuel Cost ($):</string>
    <string name="txtFuelCost" />
    <string name="title_activity_view_edit">ViewEditActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSave">Save</string>
    <string name="titleAdd">Add New Fuel Entry</string>
    <string name="titleView">View Fuel Entries</string>
    <string name="lblEdit">Select Entry to Edit</string>
    <string name="totalCost">Total Cost:</string>
</resources>
