<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/AppTitle"
        android:id="@+id/txtTitle"
        android:layout_gravity="center_horizontal"
        android:background="#787878"
        android:textColor="#f5f5f5"
        android:padding="20dp"
        android:layout_margin="10dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd"
        android:textSize="20sp"
        android:id="@+id/btnAdd"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnViewEdit"
        android:textSize="20sp"
        android:id="@+id/btnViewEdit"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
