<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleView"
        android:id="@+id/titleAdd"
        android:textSize="35sp"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#787878"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblEdit"
        android:id="@+id/lblEdit"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#3d3d3d"
        android:padding="3dp"
        android:textColor="#ffffff"
        android:textAlignment="center" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="321dp"
        android:id="@+id/fuelList"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="1dp"
        android:layout_weight="0.21"
        android:layout_marginRight="1dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:background="#3d3d3d"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/totalCost"
        android:id="@+id/totalCost"
        android:layout_margin="10dp" />

</LinearLayout>
